# RTP-Gen-NG

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: TECH_STACK_TEMPLATE.md  use_cases.drawio
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  yaml_template.h
src/core/: CMakeLists.txt  StreamOptionValidator.cpp  StreamOptionValidator.h  StreamOptions.h  calculator.cpp  calculator.h
src/gui/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  StreamOptionValidatorBasicTest.cpp  StreamOptionValidatorScenarioTest.cpp  calculator_test.cpp
